devconf2024/04_deploy_applications/devconf2024-application-04/base/200-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: devconf2024-application-04
  namespace: devconf2024-application-04
  labels:
    app: devconf2024-application-04
    app.kubernetes.io/component: devconf2024-application-04
    app.kubernetes.io/instance: devconf2024-application-04
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/component: devconf2024-application-04
    app.kubernetes.io/instance: devconf2024-application-04
